manifests/base/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-api-deployment
  namespace: radar-voluntario
spec:
  replicas: 1
  # strategy:
  #   type: Recreate
  selector:
    matchLabels:
      app: node-api
  template:
    metadata:
      name: node-api
      labels:
        app: node-api
    spec:
      containers:
        - name: node-api-container
          imagePullPolicy: Always
          image: ghcr.io/antoniolago/radar-voluntario-backend:dev-1698850332 # {"$imagepolicy": "flux-system:radar-voluntario-back-img-policy"}
          ports:
            - containerPort: 3333 # Adjust the port if your Node.js app listens on a different port
          resources:
            limits:
              cpu: "0.5"
              memory: "512Mi"
            requests:
              cpu: "0.1"
              memory: "128Mi"
