manifests/base/backend/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-api-deployment
spec:
  replicas: 3 # Adjust the number of replicas as needed
  selector:
    matchLabels:
      app: node-api
  template:
    metadata:
      labels:
        app: node-api
    spec:
      containers:
        - name: node-api-container
          image: your-node-api-image:latest
          ports:
            - containerPort: 3000 # Adjust the port if your Node.js app listens on a different port
          resources:
            limits:
              cpu: "0.5"
              memory: "512Mi"
            requests:
              cpu: "0.5"
              memory: "256Mi"
