manifests/base/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-api-service
  namespace: radar-voluntario
spec:
  selector:
    app: node-api
  ports:
    - name: http
      port: 80
      targetPort: 3333
    - name: https
      port: 443
      targetPort: 3333
  type: ClusterIP # Use "LoadBalancer" for external access if your cluster supports it
